finished basic user screen closes #1

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     <p th:text="Hello"></p>
+<!--Let's make a crappy form and style it later :D-->
+<form id="infoForm" method="post" action="/login">
+    <label>Display Name:</label>
+    <input id="userName" name="userName" type="text"/>
+    <input type="submit">
+</form>
 </body>
 </html>
